# synapse

./: Cargo.toml
synapse/: Cargo.toml
synapse-codegen-cfs/: Cargo.toml
synapse-codegen-cfs/src/: lib.rs
synapse-codegen-cpp/: Cargo.toml
synapse-codegen-cpp/src/: lib.rs
synapse-codegen-rust/: Cargo.toml
synapse-codegen-rust/src/: lib.rs
synapse-integration-tests/: Cargo.toml
synapse-integration-tests/syn/: geometry_msgs.syn  std_msgs.syn
synapse-integration-tests/tests/: geometry_msgs.rs
synapse-parser/: CLAUDE.md  Cargo.toml  synapse.pest
synapse-parser/examples/: geometry.syn  parse_synapse.rs  sample.syn
synapse-parser/src/: ast.rs  lib.rs
synapse/src/: main.rs
